--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
-[workspace]
-resolver = "3"
-members = ["introduction"]
+[package]
+name = "introduction"
+version = "0.1.0"
+edition = "2024"
+
+[lib]
+path = "introduction.rs"
+
+[dependencies]
