--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "introduction"
+name = "wtfm-rs"
 version = "0.1.0"
 edition = "2024"
-
-[lib]
-path = "introduction.rs"
 
 [dependencies]
